# nanopubs-tool

./: .gitignore  Pipfile  README.md  belbio_conf.yml.sample  log_setup.py  metadata.yaml  nptool.py  pyproject.toml  sample.metadata.yaml  sample.remap_ns_anno.yaml  setup.py
nptool/: nptool.py
test/: test.json
tests/: test_nptool.py
